src/index.css
/* ... */
.project-container { display: contents; }

.tag-container {
  padding: 0px;
  flex: 0 1 auto;
  margin-top: 0px;
  margin-bottom: 0px;
}

.tag {
  padding: 4px 8px;
  margin: 4px;
  float: left;
  border-radius: 16px;
  overflow: hidden;
  border-color: var(--col-text-o1);
  color: var(--col-text-o1);
  border-style: solid;
}


#music {
  display: flex;
  width: 100%;

  & > div {
    width: 50%;

    &:nth-of-type(2) {
      margin-top: 32px;
      margin-bottom: 32px;
    }
  }
}

@media(max-width: 700px) {
  #music {
    flex-direction: column-reverse;
    & > div { width: auto; }
  }
}

.list-container {
  position: relative;
  display: flex;
  flex-direction: column;
  row-gap: 32px;
  margin: 30px;

  & > .project {
    width: auto;

    &:after {
      top: -600%;
      left: -120%;
      width: 125%;
      height: 500%;
    }
    &:hover:after {
      top: 75%;
      left: 90%;
    }
  }

  & .descbox {
    padding: 1rem;
  }
}

.track {
  & div span {
    margin: 0;
    &:nth-of-type(1) { float: left; }
    &:nth-of-type(2) { float: right; }
  }

  & button {
    width: 64px;
    height: 64px;
    background-color: var(--col-text-o1);
    border-radius: 20px;
    border: none;
    font-size: 24px;
    color: var(--col-text-b1);
    padding: 0;
    margin: 0;

    &:hover, &:not(:hover) {
      transition: background-color ease-in-out .2s, transform ease-in-out .2s;
    }
    &:hover {
      background-color: var(--col-text-o2);
      transform: translateY(-4px);
      cursor: pointer;
    }
    &:not(:hover) {
      background-color: var(--col-text-o1);
      transform: translateY(4px);
    }
  }

  & > div {
    display: inline-block;
    width: calc(100% - 64px - 20px);
    margin: 0;
    margin-left: 10px;
  }

  & label { pointer-events: none; }
}

input[type=range] {
  -webkit-appearance: none;
  appearance: none;
  width: 100%;
  cursor: pointer;
  outline: none;
  border-radius: 15px;
  height: 6px;
  background: var(--col-text-w2);

  &:hover {
    height: 12px;

    &::-webkit-slider-thumb {
      background-color: var(--col-text-o1);
      box-shadow: 0 0 0 3px var(--col-text-o1);
    }
    &::-moz-range-thumb {
      background-color: var(--col-text-o1);
      box-shadow: 0 0 0 3px var(--col-text-o1);
    }
  }

  &:not(:hover) { height: 6px; }

  &:hover, &:not(:hover) {
    transition: height .2s ease-in-out;
  }

  &::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
    background-color: transparent;
    height: 15px;
    width: 15px;
    border-radius: 50%;
    border: none;
    transition: .2s ease-in-out;
  }

  &::-moz-range-thumb {
    background-color: var(--col-text-o1);
    height: 15px;
    width: 15px;
    border-radius: 50%;
    border: none;
    transition: .2s ease-in-out;
  }
}

